--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -43,6 +43,9 @@
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
+        <li><%= link_to "Login", "/login" %></li>
+        <li><%= link_to "Logout", "/logout" %></li>
+        <li><%= link_to "Register", "/users/new" %></li>
       </ul>
     </div>
   </div>
