--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,3 +1,5 @@
+<% if cart.count != 0 %>
+
 <section class="cart-show">
 
   <header class="page-header">
@@ -51,3 +53,8 @@
   </div>
 
 </section>
+
+<% else %>
+  <h1> YOUR CART IS EMPTY! </h1>
+  <%= link_to 'Home', :root %>
+<% end %>
