--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -36,7 +36,7 @@
           TOTAL:
         </th>
         <th>
-          <%= humanized_money_with_symbol @order.total_cents %>
+          <%= humanized_money_with_symbol @order.total_cents / 100.0%>
         </th>
       </tr>
     </tfoot>
