--- a/app/views/order_mailer/order_email.html.erb
+++ b/app/views/order_mailer/order_email.html.erb
@@ -4,9 +4,8 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Order: <%= @order.id %></h1>
     <p>
-      You have successfully submitted an order!
+      <h1>Thank you for your order.</h1>
     </p>
     <p>
       <table>
